--- a/make-4.2.91.zh_TW.po
+++ b/make-4.2.91.zh_TW.po
@@ -5,6 +5,7 @@
 # Wang Li <charles@linux.net.cn>, 2002.
 # LI Daobing <lidaobing@gmail.com>, 2008, 2013.
 # Mingye Wang <arthur200126@gmail.com>, 2015, 2016.
+# Y.C Cheng <mail@ycheng.net>, 2017.
 # Boyuan Yang <073plan@gmail.com>, 2018, 2019.
 # pan93412 <pan93412@gmail.com>, 2019.
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "POT-Creation-Date: 2019-09-16 08:26-0400\n"
 "PO-Revision-Date: 2019-10-24 22:06+0800\n"
 "Last-Translator: pan93412 <pan93412@gmail.com>\n"
-"Language-Team: Chinese <chinese-l10n@googlegroups.com>\n"
+"Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
